--- a/helloswarm/pom.xml
+++ b/helloswarm/pom.xml
@@ -71,6 +71,10 @@
     <!-- Wildfly Swarm Fractions -->
     <dependency>
       <groupId>org.wildfly.swarm</groupId>
+      <artifactId>monitor</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.wildfly.swarm</groupId>
       <artifactId>camel-cdi</artifactId>
     </dependency>
     <dependency>
