Lets simplify service to use OOTB and also use say as context-path so its not the same as service name.

--- a/helloswarm/src/main/fabric8/service.yml
+++ b/helloswarm/src/main/fabric8/service.yml
@@ -1,10 +1,4 @@
 metadata:
   annotations:
-    api.service.kubernetes.io/path: /hello
-  name: "hello"
-spec:
-  ports:
-  - port: 8181
-    protocol: "TCP"
-    targetPort: 8080
-  type: LoadBalancer
+    api.service.kubernetes.io/path: /say
+  name: "helloswarm"
