add the missing snippet to allow builds to work for wf swarm

--- a/helloswarm/pom.xml
+++ b/helloswarm/pom.xml
@@ -56,6 +56,13 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <generator>
+            <includes>
+              <include>wildfly-swarm</include>
+            </includes>
+          </generator>
+        </configuration>
       </plugin>
     </plugins>
   </build>
