--- a/helloswarm/pom.xml
+++ b/helloswarm/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>helloswarm</artifactId>
   <name>Wildfly Swarm Example</name>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <properties>
     <version.wildfly.swarm>2016.12.0</version.wildfly.swarm>
@@ -45,7 +45,7 @@
       <plugin>
         <groupId>io.fabric8</groupId>
         <artifactId>fabric8-maven-plugin</artifactId>
-        <version>3.2.7</version>
+        <version>3.2.9</version>
         <executions>
           <execution>
             <id>fmp</id>
@@ -56,13 +56,6 @@
             </goals>
           </execution>
         </executions>
-        <configuration>
-          <generator>
-            <includes>
-              <include>wildfly-swarm</include>
-            </includes>
-          </generator>
-        </configuration>
       </plugin>
     </plugins>
   </build>
